Fix spacings

--- a/web/components/ReadManifest/ReadManifest.module.css
+++ b/web/components/ReadManifest/ReadManifest.module.css
@@ -30,7 +30,7 @@
   color: #DA1E28;
   font-size: 69px;
   font-weight: bold;
-  margin-bottom: 24px;
+  margin-bottom: 18px;
 }
 
 .manifestTopicText {
